COMMONS-190: unified search - fix excerpt CSS

--- a/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
+++ b/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
@@ -44,7 +44,7 @@
   overflow: hidden;
 }
 
-.QuickSearchResult .Content .Excerpt div {
+.QuickSearchResult .Content .Excerpt, .QuickSearchResult .Content .Excerpt * {
   font-size: xx-small; color: grey;
 }
 
