COMMONS-190: remove excerpt from quick search

--- a/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
+++ b/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
@@ -44,8 +44,9 @@
   overflow: hidden;
 }
 
-.QuickSearchResult .Content .Excerpt, .QuickSearchResult .Content .Excerpt * {
-  font-size: xx-small; color: grey;
+.QuickSearchResult .Content .Title{
+  padding-top: 8px;
+  vertical-align: bottom;
 }
 
 
