PLF-4451 : [Relooking][TopNavigation][Search] Restore Top Navigation Search overwritten by Unified Search

--- a/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
+++ b/integ-search-portlet/src/main/java/org/exoplatform/commons/quicksearch/assets/style/quicksearch.css
@@ -1,4 +1,14 @@
 
+#adminSearchLink {
+    display: inline-block;
+    line-height: 41px;
+    padding: 0 10px 0 11px;
+}
+#adminkeyword {
+    display: none;
+    margin-bottom: 0px;
+}
+
 .SearchBox {
     background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/SearchIcon.png") no-repeat scroll 4px center white;
     border: solid 1px lightgray;
