--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -12,7 +12,21 @@
 			margin: 0;
 		}
 		.result {
-			padding: 20px 0 5px;
+			padding: 15px 0 5px;
+			#resultHeader {
+				padding-top: 8px;
+			}
+		}
+		
+		.resultSort > span {
+			display: inline-block;
+			padding: 6px 6px 0;
+		}
+		
+		.uiDropdownWithIcon {
+			.dropdown-menu {
+				min-width: 100px;
+			}
 		}
 	}
 	
@@ -194,6 +208,21 @@
   margin-bottom: 10px;
   padding-top: 4px;
   padding-bottom: 6px;
+}
+
+
+
+
+#sortType {
+  padding-right: 15px;
+}
+
+#sortType.Asc {
+  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/NavigationIcons/BlueUpArrow.gif") no-repeat;
+}
+
+#sortType.Desc {
+  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/NavigationIcons/BlueDownArrow.gif") no-repeat;
 }
 
 #searchPortlet input:focus, #searchPortlet textarea:focus {
