--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -1,11 +1,21 @@
 
+#adminSearchLink {
+  display: inline-block;
+  line-height: 41px;
+  padding: 0 10px 0 11px;
+}
+#adminkeyword {
+  display: none;
+  margin-bottom: 0px;
+}
+
 .SearchBox {
-    background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/SearchIcon.png") no-repeat scroll 4px center white;
-    border: solid 1px lightgray;
-    border-radius: 12px;
-    height: 18px;
-    padding-left: 20px;
-    width: 120px;
+  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/SearchIcon.png") no-repeat scroll 4px center white;
+  border: solid 1px lightgray;
+  border-radius: 12px;
+  height: 18px;
+  padding-left: 20px;
+  width: 120px;
 }
 
 .Clickable {
@@ -70,54 +80,54 @@ div[id*="quickSearchResult-"] table, div[id*="quickSearchResult-"] th, div[id*="
 
 
 .calendarBox {
-    font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
-    font-weight: bold;
-    text-align: center;
+  font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
+  font-weight: bold;
+  text-align: center;
 }
 
 .calendarBox .heading {
-    background-color: #567AB6;
-    background-image: -moz-linear-gradient(center top , #638ACD, #426393);
-    background-repeat: repeat-x;
-    border: 1px solid #224886;
-    border-radius: 4px 4px 0 0;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 2px 0;
+  background-color: #567AB6;
+  background-image: -moz-linear-gradient(center top , #638ACD, #426393);
+  background-repeat: repeat-x;
+  border: 1px solid #224886;
+  border-radius: 4px 4px 0 0;
+  color: #FFFFFF;
+  margin: 0;
+  padding: 2px 0;
 }
 
 .calendarBox .content {
-    border: 1px solid #C3C3C3;
-    border-radius: 0 0 4px 4px;
-    color: #316399;
-    font-size: 24px;
-    padding: 8px;
+  border: 1px solid #C3C3C3;
+  border-radius: 0 0 4px 4px;
+  color: #316399;
+  font-size: 24px;
+  padding: 8px;
 }
 
 .statusTask i {
-    background: url("/unified-search/public/images/status-task.png") repeat scroll 0 0 transparent;
-    display: inline-block;
-    height: 38px;
-    width: 38px;
+  background: url("/unified-search/public/images/status-task.png") repeat scroll 0 0 transparent;
+  display: inline-block;
+  height: 38px;
+  width: 38px;
 }
 
 .statusTask i.quicksearch {
-    background-size: 145px 35px;
-    height: 24px;
-    width: 24px;
+  background-size: 145px 35px;
+  height: 24px;
+  width: 24px;
 }
 
 .statusTask i.quicksearch.needs-actionIcon {
-    background-position: 0 0;
+  background-position: 0 0;
 }
 .statusTask i.quicksearch.in-processIcon {
-    background-position: -35px 0;
+  background-position: -35px 0;
 }
 .statusTask i.quicksearch.completedIcon {
-    background-position: -72px 0;
+  background-position: -72px 0;
 }
 .statusTask i.quicksearch.canceledIcon {
-    background-position: -108px 0;
+  background-position: -108px 0;
 }
 
 /*for setting*/
