--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -1,279 +1,76 @@
-@import "variables.less"; 
+@import "variables.less";
 @import "mixins.less";
 
-
-
 .uiSearchPortlet {
-	padding: 20px;
-	.searchContainer {
-		margin-bottom: 20px;
-		border-bottom: 1px solid #cccccc;
-		.searchForm > input[type="text"] {
-			margin: 0;
-		}
-		.result {
-			padding: 15px 0 5px;
-			#resultHeader {
-				padding-top: 8px;
-			}
-		}
-		
-		.resultSort > span {
-			display: inline-block;
-			padding: 6px 6px 0;
-		}
-		
-		.uiDropdownWithIcon {
-			.dropdown-menu {
-				min-width: 100px;
-			}
-		}
-	}
-	
-	.filterContainer {
-		width: 220px;
-		float: left;
-		margin: 0;
-		ul.listFilter {
-	  	padding-left: 20px;
-	  }
-	}
-	
-	.resultPage {
-		padding: 0 20px;
-		margin-left: 240px;
-		.resultBox {
-			margin: 20px 0;
-			overflow:hidden;
-			.avatar {
-				width: 50px;
-				> img {
-					width: 50px;
-				}
-			}
-			.content {
-				margin-left: 15px;
-				> h6 {
-					margin-top: 0;
-					color: #2f5e92;
-				}
-				.description {
-					line-height: 22px;
-				}
-				.time {
-					color: #999999;
-				}
-			}
-		}
-	}
-	
-	.showMore {
-		padding: 15px 0;
-		.btn {
-			width: 100%; 
-			display: block;
-			margin: 0;
-		}
-	}
+  padding: 20px;
+  .searchContainer {
+    margin-bottom: 20px;
+    border-bottom: 1px solid #cccccc;
+    .searchForm > input[type="text"] {
+      margin: 0;
+    }
+    .result {
+      padding: 15px 0 5px;
+      #resultHeader {
+        padding-top: 8px;
+      }
+    }
+
+    .resultSort > span {
+      display: inline-block;
+      padding: 6px 6px 0;
+    }
+
+    .uiDropdownWithIcon {
+      .dropdown-menu {
+        min-width: 100px;
+      }
+    }
+  }
+
+  .filterContainer {
+    width: 220px;
+    float: left;
+    margin: 0;
+    ul.listFilter {
+      padding-left: 20px;
+    }
+  }
+
+  .resultPage {
+    padding: 0 20px;
+    margin-left: 240px;
+    .resultBox {
+      margin: 20px 0;
+      overflow:hidden;
+      .avatar {
+        width: 50px;
+        > img {
+          width: 50px;
+        }
+      }
+      .content {
+        margin-left: 15px;
+        > h6 {
+          margin-top: 0;
+          color: #2f5e92;
+        }
+        .excerpt {
+          line-height: 22px;
+        }
+        .detail {
+          color: #999999;
+        }
+      }
+    }
+  }
+
+  .showMore {
+    padding: 15px 0;
+    .btn {
+      width: 100%;
+      display: block;
+      margin: 0;
+    }
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.SearchBox {
-  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/SearchIcon.png") no-repeat scroll 4px center white;
-  border: solid 1px lightgray;
-  border-radius: 12px;
-  height: 18px;
-  padding-left: 20px;
-  width: 120px;
-}
-
-.Selected {
-  font-weight: bold;
-}
-
-.Clickable {
-  cursor: pointer;
-}
-
-.Ellipsis {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  -ms-text-overflow: ellipsis;
-}
-
-.SearchResultType {
-  margin-bottom: 40px;
-  display: none;
-}
-
-
-.SearchResult {
-  margin-left: 5px;
-  padding-top: 5px;
-  height: 60px;
-  overflow: hidden;
-}
-
-.SearchResult .Avatar {
-  float: left;
-  padding-top: 3px;
-  overflow: hidden;
-}
-
-.SearchResult .Avatar img {
-  width: 48px;
-  height: 48px;
-}
-
-.SearchResult .Content {
-  padding-left: 10px;
-  overflow: hidden;
-}
-
-.SearchResult .Content .Title {
-/*        font-weight: bold;*/
-/*        color: lightgray !important;*/
-/*        color: #555555 !important;*/
-}
-
-.SearchResult .Content .Excerpt, .SearchResult .Content .Excerpt * {
-  font-size: x-small; height: 19px;
-}
-
-.SearchResult .Content .Detail {
-  font-size: small; color: grey;
-}
-
-/*
-#facetsFilter {
-  float: left;
-  border: solid 1px lightgray;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 5px;
-  padding-bottom: 10px;
-  height: auto;
-  width: auto;
-}
-
-#facetsFilterTitle {
-  text-align: center;
-  background: none repeat scroll 0% 0% lightGrey;
-  border-bottom: 1px solid;
-  margin-bottom: 10px;
-  padding-top: 4px;
-  padding-bottom: 6px;
-}
-
-#facetsFilter ul {
-  list-style: none outside none;
-  padding-left: 20px;
-  margin-top: 2px;
-  margin-bottom: 16px;
-}
-
-*/
-
-
-/*
-#resultPage {
-  overflow: auto;
-}
-*/
-
-#facetsFilterTitle {
-  text-align: center;
-  background: none repeat scroll 0% 0% lightGrey;
-  /*border-bottom: 1px solid;*/
-  margin-bottom: 10px;
-  padding-top: 4px;
-  padding-bottom: 6px;
-}
-
-
-
-
-#sortType {
-  padding-right: 15px;
-}
-
-#sortType.Asc {
-  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/NavigationIcons/BlueUpArrow.gif") no-repeat;
-}
-
-#sortType.Desc {
-  background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/NavigationIcons/BlueDownArrow.gif") no-repeat;
-}
-
-#searchPortlet input:focus, #searchPortlet textarea:focus {
-  outline: none;
-}
-
-
-.calendarBox {
-  font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
-  font-weight: bold;
-  text-align: center;
-}
-
-.calendarBox .heading {
-  background-color: #567AB6;
-  background-image: -moz-linear-gradient(center top , #638ACD, #426393);
-  background-repeat: repeat-x;
-  border: 1px solid #224886;
-  border-radius: 4px 4px 0 0;
-  color: #FFFFFF;
-  margin: 0;
-  padding: 2px 0;
-}
-
-.calendarBox .content {
-  border: 1px solid #C3C3C3;
-  border-radius: 0 0 4px 4px;
-  color: #316399;
-  font-size: 24px;
-  padding: 8px;
-}
-
-.statusTask i {
-    background: url("/unified-search/public/images/status-task.png") repeat scroll 0 0 transparent;
-    display: inline-block;
-    height: 38px;
-    margin-top: 1px;
-    width: 38px;
-}
-
-.statusTask i.needs-actionIcon {
-    background-position: 0 0;
-}
-.statusTask i.in-processIcon {
-    background-position: -60px 0;
-}
-.statusTask i.completedIcon {
-    background-position: -120px 0;
-}
-.statusTask i.canceledIcon {
-    background-position: -180px 0;
-}
-
-
