--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -45,12 +45,13 @@
       overflow:hidden;
       .avatar {
         width: 50px;
+        overflow: hidden;
         > img {
           width: 50px;
         }
       }
       .content {
-        margin-left: 15px;
+        margin-left: 60px;
         > h6 {
           margin-top: 0;
           color: #2f5e92;
