--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -1,56 +1,9 @@
-
-.SearchBox {
-    background: url("/eXoResources/skin/DefaultSkin/skinIcons/16x16/icons/SearchIcon.png") no-repeat scroll 4px center white;
-    border: solid 1px lightgray;
-    border-radius: 12px;
-    height: 18px;
-    padding-left: 20px;
-    width: 120px;
-}
-
-.Clickable {
-  cursor: pointer;
-}
-
-.Ellipsis {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  -ms-text-overflow: ellipsis;
-}
+@import "variables.less";
+@import "mixins.less";
 
 
-.QuickSearchResult {
-  height: 30px;
-  overflow: hidden;
-}
 
-.QuickSearchResult .Avatar {
-  float: left;
-  padding-top: 3px;
-  width: 24px;
-  height: 24px;
-  overflow: hidden;
-}
-
-.QuickSearchResult .Avatar img {
-  width: 24px;
-  height: 24px;
-}
-
-.QuickSearchResult .Content {
-  padding-left: 5px;
-  overflow: hidden;
-}
-
-.QuickSearchResult .Content .Title{
-  padding-top: 8px;
-  vertical-align: bottom;
-}
-
-
-div[id*="quickSearchResult-"] {
+.uiQuickSearchResult {
   position: absolute;
   background: white;
   width: 315px;
@@ -58,94 +11,135 @@ div[id*="quickSearchResult-"] {
   margin-left: 3px;
   display:none;
   z-index: 1001;
+  .uiGrid {
+  	margin: 0;
+	  tr th {
+	  	border: none;
+	  	text-align: right;
+	  }
+	  tr:nth-child(2n) th {
+	  	background: white;
+	  }  
+		tbody {
+			tr:hover td,
+			tr:hover th {
+				#gradient > .vertical(@dropdownLinkBackgroundHover, darken(@dropdownLinkBackgroundHover, 15%));
+				color: white;
+				border-color: #8ba6d5;
+			}
+			tr:hover td a {
+				color: white;
+			}
+		}
+
+		tr:first-child th {
+			border-top-left-radius: 4px;
+		}
+
+		tr:first-child td {
+			border-top-right-radius: 4px;
+		}
+
+		tr:last-child th:first-child,
+		tr:last-child td:first-child {
+			border-bottom-left-radius: 4px;
+			border-bottom-right-radius: 4px;
+		}
+
+		.message {
+			border-top: 1px solid #CFCFCF;
+			text-align: center;
+			> a {
+				font-weight: bold;
+				color: #333333;
+			}
+			> a:hover {
+				color: #2f5e92;
+			}
+		}
+		.message:hover {
+			background: none;
+		}
+	}
+
+	.quickSearchResult {
+		.avatar {
+			display: inline-block;
+			.square(20px);
+			vertical-align: middle;
+			overflow: hidden;
+			img {
+				.square(20px);
+			}
+		}
+		.name {
+			display: inline-block;
+			margin-left: 5px;
+	    max-width: 145px;
+	    white-space: nowrap;
+		}
+	}
+
 }
 
-div[id*="quickSearchResult-"] table, div[id*="quickSearchResult-"] th, div[id*="quickSearchResult-"] td {
-  border: 1px solid lightgray;
-}
 
-.QuickSearchPortlet input:focus, .QuickSearchPortlet textarea:focus {
-  outline: none;
-}
+
+
+
+
+
+
+
+
 
 
 .calendarBox {
-    font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
-    font-weight: bold;
-    text-align: center;
+  font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
+  font-weight: bold;
+  text-align: center;
 }
 
 .calendarBox .heading {
-    background-color: #567AB6;
-    background-image: -moz-linear-gradient(center top , #638ACD, #426393);
-    background-repeat: repeat-x;
-    border: 1px solid #224886;
-    border-radius: 4px 4px 0 0;
-    color: #FFFFFF;
-    margin: 0;
-    padding: 2px 0;
+  background-color: #567AB6;
+  background-image: -moz-linear-gradient(center top , #638ACD, #426393);
+  background-repeat: repeat-x;
+  border: 1px solid #224886;
+  border-radius: 4px 4px 0 0;
+  color: #FFFFFF;
+  margin: 0;
+  padding: 2px 0;
 }
 
 .calendarBox .content {
-    border: 1px solid #C3C3C3;
-    border-radius: 0 0 4px 4px;
-    color: #316399;
-    font-size: 24px;
-    padding: 8px;
+  border: 1px solid #C3C3C3;
+  border-radius: 0 0 4px 4px;
+  color: #316399;
+  font-size: 24px;
+  padding: 8px;
 }
 
 .statusTask i {
-    background: url("/unified-search/public/images/status-task.png") repeat scroll 0 0 transparent;
-    display: inline-block;
-    height: 38px;
-    width: 38px;
+  background: url("/unified-search/public/images/status-task.png") repeat scroll 0 0 transparent;
+  display: inline-block;
+  height: 38px;
+  width: 38px;
 }
 
 .statusTask i.quicksearch {
-    background-size: 145px 35px;
-    height: 24px;
-    width: 24px;
+  background-size: 145px 35px;
+  height: 24px;
+  width: 24px;
 }
 
 .statusTask i.quicksearch.needs-actionIcon {
-    background-position: 0 0;
+  background-position: 0 0;
 }
 .statusTask i.quicksearch.in-processIcon {
-    background-position: -35px 0;
+  background-position: -35px 0;
 }
 .statusTask i.quicksearch.completedIcon {
-    background-position: -72px 0;
+  background-position: -72px 0;
 }
 .statusTask i.quicksearch.canceledIcon {
-    background-position: -108px 0;
+  background-position: -108px 0;
 }
-
-/*for setting*/
-
-#quickSearchSetting {
-  height: 600px;
-}
-
-#quickSearchSetting div {
-  margin-top: 10px;
-}
-
-#quickSearchSetting table tr {
-  height: 30px;
-}
-
-#quickSearchSetting table td:first-child {
-  width: 110px;
-}
-
-
-#lstSearchInOptions {
-  display: none;
-  border: 1px dotted;
-  border-top:none;
-  overflow-x: hidden;
-  padding-bottom: 10px;
-  margin-left: 4px;
-}
-
-
