COMMONS-190: add again adminSearchLink and adminkeyword class in quicksearchpage.less

--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -1,7 +1,15 @@
 @import "variables.less";
 @import "mixins.less";
 
-
+#adminSearchLink {
+  display: inline-block;
+  line-height: 41px;
+  padding: 0 10px 0 11px;
+}
+#adminkeyword {
+  display: none;
+  margin-bottom: 0px;
+}
 
 .uiQuickSearchResult {
   position: absolute;
