COMMONS-222: update search result template

--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -100,7 +100,7 @@
 
 
 
-
+/*
 .calendarBox {
   font-family: "Helvetica Neue Bold",Helvetica,Lucida,Arial,sans-serif;
   font-weight: bold;
@@ -151,3 +151,4 @@
 .statusTask i.quicksearch.canceledIcon {
   background-position: -108px 0;
 }
+*/
