--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -68,6 +68,11 @@
 		.message:hover {
 			background: none;
 		}
+		
+		.noResult {
+			background: white;
+			.border-radius(4px);
+		}
 	}
 
 	.quickSearchResult {
