--- a/integ-search-portlet/src/main/webapp/skin/less/searchAdmin.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchAdmin.less
@@ -1,10 +1,8 @@
 
-#searchAdmin table, #searchAdmin th, #searchAdmin td {
-  border: 1px solid lightgray;
-  padding-top: 4px;
-  padding-bottom: 2px;
-}
-
-#searchAdmin th {
-  background-color: darkgray;
+.uiSearchAdmin {
+	padding: 20px 30px;
+	background: white;
+	.titleWithBorder {
+		margin: 20px 0;
+	}
 }
