--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -35,6 +35,9 @@
     ul.listFilter {
       padding-left: 20px;
     }
+    .uiCheckbox {
+    	width: 16px;
+    }
   }
 
   .resultPage {
@@ -46,6 +49,7 @@
       .avatar {
         width: 64px;
         overflow: hidden;
+        text-align: center;
         > img {
           width: 64px;
         }
