COMMONS-222: fix css in result page

--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -4,6 +4,7 @@
 .uiSearchPortlet {
   padding: 20px;
   .searchContainer {
+    display: none;
     margin-bottom: 20px;
     border-bottom: 1px solid #cccccc;
     .searchForm > input[type="text"] {
@@ -17,7 +18,7 @@
     }
 
     .resultSort > span {
-      display: inline-block;
+      display: none;
       padding: 6px 6px 0;
     }
 
@@ -29,6 +30,7 @@
   }
 
   .filterContainer {
+    display: none;
     width: 220px;
     float: left;
     margin: 0;
@@ -41,6 +43,7 @@
   }
 
   .resultPage {
+    display: none;  
     padding: 0 20px;
     margin-left: 240px;
     .resultBox {
