COMMONS-222: fix css in result page (hide sort when page is empty)

--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -17,8 +17,12 @@
       }
     }
 
-    .resultSort > span {
+    .resultSort {
       display: none;
+    }
+
+    .resultSort > span {
+      display: inline-block;
       padding: 6px 6px 0;
     }
 
