PLF-4797: Display "searching.." during search

--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -85,4 +85,20 @@
       margin: 0;
     }
   }
+  .resultLoading{
+  	background: url("/unified-search/public/images/loading_2.gif") no-repeat center 20px white;
+  	border: 1px solid #CDCDCD;
+  	border-radius: 3px 3px 3px 3px;
+  	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  	color: #343434;
+  	display: block;
+  	left: 60%;
+  	padding-bottom: 20px;
+  	padding-top: 105px;
+  	position: absolute;
+  	text-align: center;
+  	top: 40%;
+  	width: 150px;
+  	z-index: 9999;  
+  }
 }
