PLF-4802: quick search : I can't use keyboard arrows to select results

--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -84,13 +84,15 @@
     }
   }
   
-  .quickSearchResult:hover {
+  .quickSearchResult:hover, .quickSearchResult.arrowResult {
 	    #gradient > .vertical(@dropdownLinkBackgroundHover, darken(@dropdownLinkBackgroundHover, 15%));
 	    border-color: #8ba6d5;
 	    a {
 	    	color: white;
 	    }
 	  }
+
+	
 
 }
 
