UI-2730: Display a File in the Floating Result

--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -71,6 +71,9 @@
       .square(24px);
       vertical-align: top;
       overflow: hidden;
+      i[class^="uiIcon"] {
+      	display: block!important;
+      }
       img {
         .square(24px);
       }
