INTEG-207: [Unified Search] Incorrect UI of Search Preference tab

--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -75,7 +75,7 @@
     #gradient > .vertical(@dropdownLinkBackgroundHover, darken(@dropdownLinkBackgroundHover, 15%));
     border-color: #8ba6d5;
     a {
-		color: white;
+            color: white;
 	    > [class^="uiIconPLF"] {
 	    	background-image: url("/eXoPlatformResources/skin/platformSkin/images/icons/uiIconsPLFWhite.png");
 	    }
@@ -89,4 +89,11 @@
 	    }
    	}
   }
+}
+
+.uiEDWidth70, .uiEDWidth70 select.uiResultPerPage, select.uiResultPerPage {
+	width: 70px;
+}
+.uiSearchSetting, .uiQuickSearchSetting {
+	padding-left: 10px;
 }
