--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -90,7 +90,10 @@
    	}
   }
 }
-*/
-.uiEDWidth70, .uiEDWidth70 select.uiResultPerPage {
+
+.uiEDWidth70, .uiEDWidth70 select.uiResultPerPage, select.uiResultPerPage {
 	width: 70px;
+}
+.uiSearchSetting, .uiQuickSearchSetting {
+	padding-left: 10px;
 }
