--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -10,7 +10,7 @@
   .searchContainer {
     display: none;
     margin-bottom: 20px;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1px solid @borderColor;
     .searchForm > input[type="text"] {
       margin: 0;
     }
@@ -73,13 +73,13 @@
         > h6 {
           margin-top: 0;
           margin-bottom: 5px;
-          color: #2f5e92;
+          color: @blue;
         }
         .excerpt {
           line-height: 22px;
         }
         .detail {
-          color: #999999;
+          color: @grayLight;
         }
       }
     }
@@ -94,11 +94,11 @@
     }
   }
   .resultLoading{
-  	background: url("/unified-search/skin/images/loadingSearch.gif") no-repeat center 20px white;
-  	border: 1px solid #CDCDCD;
+  	background: url("/unified-search/skin/images/loadingSearch.gif") no-repeat center 20px @white;
+  	border: 1px solid @borderColor;
   	border-radius: 3px 3px 3px 3px;
   	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-  	color: #343434;
+  	color: @textColor;
   	display: block;
   	left: 60%;
   	padding-bottom: 20px;
