UI-2909: Unified Search - Incorrect icon at Search Result

--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -62,10 +62,13 @@
         overflow: hidden;
         text-align: center;
         > img {
-          width: 54px;
+          max-width: 54px;
+          max-height: 54px;
         }
         &.userThumbnail > img {
           .border-radius(4px);
+          height: 54px;
+          width: 54px;
         }
       }
       .content {
