--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -11,14 +11,15 @@
     display: none;
     margin-bottom: 20px;
     border-bottom: 1px solid @borderColor;
+    height: 40px;
     .searchForm > input[type="text"] {
       margin: 0;
     }
+    #resultHeader {
+	  padding: 6px 6px 0;
+    }
     .result {
-      padding: 15px 0 5px;
-      #resultHeader {
-        padding-top: 8px;
-      }
+      padding: 15px 0 5px;      
     }
 
     .resultSort {
@@ -52,8 +53,28 @@
 
   .resultPage {
     display: none;  
-    padding: 15px 20px;
+    padding: 40px 20px;
     margin-left: 240px;
+    .noResultInfo {
+  		display: none;
+	}
+	&.noResult{
+		.noResultInfo {
+  			display: block;
+  			text-align: center;
+  			> h3 {
+			  color: #999;
+			  margin-bottom: 5px;
+			}
+			> p {
+			  color: #333;
+			  line-height: 25px;
+			}  			
+		}
+		.showMore {
+		  display: none;
+		}
+	}
     .resultBox {
       margin: 20px 0;
       overflow:hidden;
