--- a/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/quicksearchpage.less
@@ -65,25 +65,25 @@
 
   .quickSearchResult {
     padding: 5px 10px 7px;
-    display: block;	
+    display: block;
     .avatarTiny > img {
     	margin-right: 5px;
     }
   }
-  
+
   .quickSearchResult:hover, .quickSearchResult.arrowResult {
-    #gradient > .vertical(@blueLighter, darken(@blueLighter, 15%));
-    border-color: @blueDark;
+    #gradient > .vertical(@primaryLighterColor, darken(@primaryLighterColor, 15%));
+    border-color: @primaryDarkColor;
     a {
 		color: white;
 	    > [class^="uiIconPLF"] {
 	    	background-image: url("/eXoPlatformResources/skin/images/icons/uiIconsPLFWhite.png");
 	    }
-	    
+
 	    > [class^="uiIconEcms"] {
 	    	background-image: url("/eXoWCMResources/skin/images/Icons/uiIconsEcmsWhite.png");
 	    }
-	    
+
 	    > [class^="uiIconWiki"] {
 	    	background-image: url("/wiki/skin/images/Icons/uiIconsWikiWhite.png");
 	    }
