--- a/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
+++ b/integ-search-portlet/src/main/webapp/skin/less/searchpage.less
@@ -97,7 +97,7 @@
         > h6 {
           margin-top: 0;
           margin-bottom: 5px;
-          color: @blue;
+          color: @primaryColor;
         }
         .excerpt {
           line-height: 22px;
